fixed the swaggers files, services and controllers
