# docs/swagger.json
@@ -178,15 +178,11 @@
         "summary": "Sign up!",
         "operationId": "registerUser",
         "description": "Sign up",
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
+        "security": [],
         "requestBody": {
           "required": true,
           "content": {
-            "multipart/form-data": {
+            "application/json": {
               "schema": {
                 "type": "object",
                 "required": [
