# src/controllers/auth.js
@@ -1,25 +1,57 @@
 
 import { ONE_DAY } from "../constants/auth.js";
-import { loginUser, logoutUser, refreshUsersSession, registerUser } from "../services/auth.js";
+import { SessionCollection } from "../db/models/session.js";
+import { createSession, loginUser, logoutUser, refreshUsersSession, registerUser } from "../services/auth.js";
+
+const createSessionData=async(userId)=>{
+    const sessionInf=createSession();
+    const session = await SessionCollection.create({
+        userId,
+        ...sessionInf,
+    });
+    return session;
+};
+
+const sessionCookies=(res,session)=>{
+    res.cookie('refreshToken', session.refreshToken, {
+        httpOnly: true,
+        expires: new Date(Date.now() + ONE_DAY),
+    });
+    res.cookie('sessionId', session._id, {
+        httpOnly: true,
+        expires: new Date(Date.now() + ONE_DAY),
+    });
+};
+
 
 export const registerUserController=async(req,res)=>{
+    if (!req.body || Object.keys(req.body).length === 0) {
+        return res.status(400).json({
+            status: 400,
+            message: 'Request body is missing',
+        });
+    }
     const user=await registerUser(req.body);
+    const session = await createSessionData(user._id);
+    sessionCookies(res,session);
+
     res.status(201).json({
         status:201,
         message:'Successfully registered user!',
         data:user,
     });
+
+
 };
 export const loginUserController=async(req,res)=>{
+    if (!req.body || Object.keys(req.body).length === 0) {
+        return res.status(400).json({
+            status: 400,
+            message: 'Request body is missing',
+        });
+    }
    const session= await loginUser(req.body);
-   res.cookie('refreshToken', session.refreshToken, {
-    httpOnly:true,
-    expires:new Date(Date.now()+ONE_DAY),
-   });
-   res.cookie('sessionId', session._id, {
-    httpOnly:true,
-    expires:new Date(Date.now()+ONE_DAY),
-   });
+   sessionCookies(res,session);
    res.json({
     status:200,
     message:'Successfully logged in an user!',
@@ -46,23 +78,19 @@ res.status(204).send();
 };
 
 
-const setupSession=(res, session)=>{
-    res.cookie('refreshToken', session.refreshToken,{
-        httpOnly:true,
-        expires:new Date(Date.now()+ONE_DAY)
-    });
-    res.cookie('sessionId', session._id,{
-        httpOnly:true,
-        expires:new Date(Date.now()+ONE_DAY)
-    });
-};
-
 export const refreshUserSessionController=async(req,res)=>{
-    const session=await refreshUsersSession({
-        sessionId:req.cookies.sessionId,
-        refreshToken:req.cookies.refreshToken,
+    const { sessionId, refreshToken } = req.cookies;
+    if (!sessionId || !refreshToken) {
+        return res.status(400).json({
+            status: 400,
+            message: 'Session ID or refresh token is missing in cookies',
+        });
+    }
+    const session = await refreshUsersSession({
+        sessionId,
+        refreshToken,
     });
-    setupSession(res, session);
+    sessionCookies(res,session);
     res.json({
         status:200,
         message:'Successfully refreshed a session!',
